--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a>
           </p>
           
-          <img src="./assets/selfie.jpg"  class="rotate" width="250px" height="300px">
+          <img src="./assets/selfie.jpg"  id="rotate" width="250px" height="300px">
         </div>
       </div>
 
