--- a/index.html
+++ b/index.html
@@ -34,14 +34,24 @@
       <div id="About">
         <p id="aboutheading">About Me</p>
         <div id="Me">
-          <p>Hello, my name is Amy Phanphongsa-Syxomphou (Pun-pohng-sa - See-som-poo). Phew! That's a mouthful and I wouldn't expect you to pronouce it perfectly. I am an aspiring developer. I have received a Certificate of Achievement from PunchCode, an immersive 12-week coding bootcamp course located in Las Vegas, NV. I don't know every thing about coding but I am willing to learn.</br>
+          <p>Hello, my name is Amy Phanphongsa-Syxomphou (Pun-pohng-sa - See-som-poo). Phew! That's a mouthful and I wouldn't expect you to pronouce it perfectly. I'm originally from Honolulu, HI. I'm an aspiring developer. I have received a Certificate of Achievement from PunchCode, an immersive 12-week coding bootcamp course located in Las Vegas, NV. I don't know every thing about coding but I am willing to learn.</br>
           </br>
-          Aside from honing my coding skills, I love traveling and exploring. I don't quite have a favorite travel destination because each place is unique in its own special way.
+          Prior to attending PunchCode, I was a full time Waitress working tirelessly 7 days a week at 2 different restaurants. I enjoy serving because it gives me a chance to learn about other people. I'm also able to make them feel special.</br>
+          </br>
+          Aside from honing my coding skills, I love traveling, exploring, and eating. I don't quite have a favorite travel destination because each place is unique in its own special way. However, I love all of my solo trips because I had no set itinerary.
           </br> </br>
-          <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a>
+          The adventure never stops. <i class="fab fa-angellist"></i> <i class="fas fa-heart"></i>
+          <!-- <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a> -->
           </p>
           
-          <img src="./assets/selfie.jpg"  id="rotate" width="250px" height="300px">
+          <div id="right">
+            <img src="./assets/selfie.jpg" id="rotate" width="250px" height="300px">
+            <figure>
+              <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a>
+              <figcaption>Received Dec. 2019</figcaption>
+            </figure>
+          </div>
+          
         </div>
       </div>
 
