--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
           <!-- <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a> -->
           </p>
           
-          <img src="./assets/selfie.jpg" id="rotate" width="250px" height="300px">
-          <figure>
-            <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a>
-            <figcaption>Received Dec. 2019</figcaption>
-          </figure>
+          <div id="right">
+            <img src="./assets/selfie.jpg" id="rotate" width="250px" height="300px">
+            <figure>
+              <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a>
+              <figcaption>Received Dec. 2019</figcaption>
+            </figure>
+          </div>
           
         </div>
       </div>
