--- a/index.html
+++ b/index.html
@@ -56,22 +56,39 @@
       </div>
 
       <!-- Portfolio section -->
-      <p id="portheading">Previous Projects</p>
+      <!-- <p id="portheading">Previous Projects</p> -->
 
       <div id="Portfolio">
-        <div class="projects">
-          <a href="http://github.com/aphanpo/final" target="_blank">
-          <img src="./assets/capstone.png" width="250px" height="200px" id="pic"> </a>
-          <p class="projtitle"><a href="http://github.com/aphanpo/final" target="_blank">Beds For Hope</a></p>
-          <!-- <p>Homeless shelter bed finder</p> -->
-          <p id="gh"><a href="http://github.com/aphanpo/final" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
-        </div>
+        <p id="portheading">Previous Projects</p>
+        <div class="port">
+          <div class="projects">
+            <a href="http://github.com/aphanpo/final" target="_blank">
+              <img src="./assets/capstone.png" id="pic"> </a>
+            <p class="projtitle"><a href="http://github.com/aphanpo/final" target="_blank">Beds For Hope</a></p>
+            <!-- <p>Homeless shelter bed finder</p> -->
+            <p id="gh"><a href="http://github.com/aphanpo/final" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          </div>
 
-        <div class="projects">
-          <a href="http://github.com/aphanpo/sk8er-site" target="_blank">
-          <img src="./assets/peralta-logo.png" width="250px" height="200px" id="pic"> </a>
-          <p class="projtitle"><a href="http://github.com/aphanpo/sk8er-site" target="_blank">Mock Skater Site</a></p>
-          <p id="gh"><a href="http://github.com/aphanpo/sk8er-site" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          <div class="projects">
+            <a href="https://mock-sk8er-site.now.sh/" target="_blank">
+              <img src="./assets/peralta-logo.png" id="pic"> </a>
+            <p class="projtitle"><a href="https://mock-sk8er-site.now.sh/" target="_blank">Mock Skater Site</a></p>
+            <p id="gh"><a href="http://github.com/aphanpo/sk8er-site" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          </div>
+
+          <div class="projects">
+            <a href="https://mock-etsy-page.now.sh/" target="_blank">
+              <img src="assets/etsy.jpg" id="pic"> </a>
+            <p class="projtitle"><a href="https://mock-etsy-page.now.sh/" target="_blank">Mock Etsy Page</a></p>
+            <p id="gh"><a href="https://github.com/aphanpo/Create-Etsy-Search-Page" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          </div>
+
+          <div class="projects">
+            <a href="https://javascript-clock-two.now.sh/" target="_blank">
+              <img src="assets/clock-logo.png" id="pic"></a>
+            <p class="projtitle"><a href="https://javascript-clock-two.now.sh/" target="_blank">Javascript Clock (PDT)</a></p>
+            <p id="gh"><a href="https://github.com/aphanpo/Javascript-Clock" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          </div>
         </div>
       </div>  
 
@@ -92,6 +109,6 @@
 
     </div>
 
-    <button id="myBtn"><a href="#top" style="color: white"><i class="fas fa-long-arrow-alt-up"></i></a></button>
+    <a href="#top"><button id="myBtn" style="color: white"><i class="fas fa-long-arrow-alt-up"></i></button></a>
 </body>
 </html>
