--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
             <p class="projtitle"><a href="https://javascript-clock-two.now.sh/" target="_blank">Javascript Clock (PDT)</a></p>
             <p id="gh"><a href="https://github.com/aphanpo/Javascript-Clock" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
           </div>
+
+          <div class="projects">
+            <a href="https://restaurant-project-rk4bug0oh.now.sh/html/menu.html" target="_blank">
+              <img src="assets/restaurant-logo.PNG" id="pic"></a>
+            <p class="projtitle"><a href="https://restaurant-project-rk4bug0oh.now.sh/html/menu.html" target="_blank">Mock Restaurant</a></p>
+            <p id="gh"><a href="https://github.com/alexjmitchell/restaurant-project" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          </div>
         </div>
       </div>  
 
