--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
+
 <body>
     <div class="container">
       <div id="Home">
         <header>
             <div class="navbar">
-                <p><a href="#Home">Home</a></p>
+                <p><a href="#Home" class="active">Home</a></p>
                 <p><a href="#About">About</a></p>
                 <p><a href="#Portfolio">Projects</a></p>
                 <p><a href="#Contact">Contact</a></p>
@@ -117,5 +118,6 @@
     </div>
 
     <a href="#top"><button id="myBtn" style="color: white"><i class="fas fa-long-arrow-alt-up"></i></button></a>
+
 </body>
 </html>
