--- a/index.html
+++ b/index.html
@@ -45,11 +45,10 @@
           <p>
           Aside from honing my coding skills, I love traveling, exploring, and eating. I don't quite have a favorite travel destination because each place is unique in its own special way. However, I love all of my solo trips because I had no set itinerary.</p>
           </br> </br>
-          <p>
-          The adventure never stops. <i class="fab fa-angellist"></i> <i class="fas fa-heart"></i>
-          </br></br>
-          <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" id="cert" alt="PunchCode" width="250px" height="150px"></a>
-          </p>
+          <p id="adv">The adventure never stops. <i class="fab fa-angellist"></i> <i class="fas fa-heart"></i></p>
+
+          <!-- <a href="https://punchcode.org/" title="PunchCode" target="_blank"><img src="./assets/punchcode.jpg" align="right" id="cert" alt="PunchCode" width="250px" height="150px"></a> -->
+          
         </div>
           
       </div>
