--- a/index.html
+++ b/index.html
@@ -53,45 +53,75 @@
       </div>
 
       <!-- Portfolio section -->
-      <!-- <p id="portheading">Previous Projects</p> -->
+      <!-- <p id="portheading">Previous Projects</p> --> 
 
       <div id="Portfolio">
         <p id="portheading">Previous Projects</p>
-        <div class="port">
-          <div class="projects">
-            <a href="http://github.com/aphanpo/final" target="_blank">
-              <img src="./assets/capstone.png" id="pic"> </a>
-            <p class="projtitle"><a href="http://github.com/aphanpo/final" target="_blank">Beds For Hope</a></p>
-            <!-- <p>Homeless shelter bed finder</p> -->
-            <p id="gh"><a href="http://github.com/aphanpo/final" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+        <div class="cards">
+          <div class="port">
+            <div class="projects">
+              <div class="front">
+                <a href="http://github.com/aphanpo/final" target="_blank">
+                <img src="./assets/capstone.png" id="pic"> </a>
+                <p class="projtitle"><a href="http://github.com/aphanpo/final" target="_blank">Beds For Hope</a></p>
+              </div>
+              <div class="back">
+                <p>Homeless shelter bed finder</p>
+                <p id="gh"><a href="http://github.com/aphanpo/final" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+              </div>
+            </div>
           </div>
-
-          <div class="projects">
-            <a href="https://javascript-clock-two.now.sh/" target="_blank">
-              <img src="assets/clock-logo.png" id="pic"></a>
-            <p class="projtitle"><a href="https://javascript-clock-two.now.sh/" target="_blank">Javascript Clock (PDT)</a></p>
-            <p id="gh"><a href="https://github.com/aphanpo/Javascript-Clock" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          <div class="port">
+            <div class="projects">
+              <div class="front">
+                <a href="https://javascript-clock-two.now.sh/" target="_blank">
+                  <img src="assets/clock-logo.png" id="pic"></a>
+                <p class="projtitle"><a href="https://javascript-clock-two.now.sh/" target="_blank">JS Clock (PDT)</a></p>
+              </div>
+              <div class="back">
+                <p>24 hour clock / Hex numbers</p>
+                <p id="gh"><a href="https://github.com/aphanpo/Javascript-Clock" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+              </div>
+            </div>
           </div>
-
-          <div class="projects">
-            <a href="https://mock-sk8er-site.now.sh/" target="_blank">
-              <img src="./assets/peralta-logo.png" id="pic"> </a>
-            <p class="projtitle"><a href="https://mock-sk8er-site.now.sh/" target="_blank">Mock Skater Site</a></p>
-            <p id="gh"><a href="http://github.com/aphanpo/sk8er-site" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          <div class="port">
+            <div class="projects">
+              <div class="front">
+                <a href="https://mock-sk8er-site.now.sh/" target="_blank">
+                  <img src="./assets/peralta-logo.png" id="pic"> </a>
+                <p class="projtitle"><a href="https://mock-sk8er-site.now.sh/" target="_blank">Sk8er Site</a></p>
+              </div>
+              <div class="back">
+                <p>Mock Skater Site</p>
+                <p id="gh"><a href="http://github.com/aphanpo/sk8er-site" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+              </div>
+            </div>
           </div>
-
-          <div class="projects">
-            <a href="https://mock-etsy-page.now.sh/" target="_blank">
-              <img src="assets/etsy.jpg" id="pic"> </a>
-            <p class="projtitle"><a href="https://mock-etsy-page.now.sh/" target="_blank">Mock Etsy Page</a></p>
-            <p id="gh"><a href="https://github.com/aphanpo/Create-Etsy-Search-Page" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          <div class="port">
+            <div class="projects">
+              <div class="front">
+                <a href="https://mock-etsy-page.now.sh/" target="_blank">
+                  <img src="assets/etsy.jpg" id="pic"> </a>
+                <p class="projtitle"><a href="https://mock-etsy-page.now.sh/" target="_blank">Mock Etsy Page</a></p>
+              </div>
+              <div class="back">
+                <p>Used large JSON data</p>
+                <p id="gh"><a href="https://github.com/aphanpo/Create-Etsy-Search-Page" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+              </div>
+            </div>
           </div>
-
-          <div class="projects">
-            <a href="https://restaurant-project-rk4bug0oh.now.sh/html/menu.html" target="_blank">
-              <img src="assets/restaurant-logo.PNG" id="pic"></a>
-            <p class="projtitle"><a href="https://restaurant-project-rk4bug0oh.now.sh/html/menu.html" target="_blank">Mock Restaurant</a></p>
-            <p id="gh"><a href="https://github.com/alexjmitchell/restaurant-project" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+          <div class="port">
+            <div class="projects">
+              <div class="front">
+                <a href="https://restaurant-project-rk4bug0oh.now.sh/html/menu.html" target="_blank">
+                  <img src="assets/restaurant-logo.PNG" id="pic"></a>
+                <p class="projtitle"><a href="https://restaurant-project-rk4bug0oh.now.sh/html/menu.html" target="_blank">Mock Restaurant</a></p>
+              </div>
+              <div class="back">
+                <p>Collaborative project</p>
+                <p id="gh"><a href="https://github.com/alexjmitchell/restaurant-project" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+              </div>
+            </div>
           </div>
         </div>
       </div>  
