--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </div>
         </header>
         <div class="Intro">
-            <p id="FullName">Amy Phanphongsa-Syxomphou</p>
-            <p id="Title">Web Developer <i class="fas fa-laptop-code"></i></p>
+            <p id="myName">Amy Phanphongsa-Syxomphou</p>
+            <p id="myTitle">Web Developer <i class="fas fa-laptop-code"></i></p>
             <p id="tech">
               <i class="fab fa-html5 html5" alt="html5" title="html5"></i> 
               <i class="fab fa-js js" alt="Javascript" title="Javascript"></i> 
@@ -34,7 +34,7 @@
       
       <div id="About">
         <p id="aboutheading">About Me</p>
-        <div id="Me">
+        <div id="bio">
           <img src="./assets/selfie.jpg" align="right" id="rotate" width="250px" height="300px">
           <p>Hello, my name is Amy Phanphongsa-Syxomphou (Pun-pohng-sa - See-som-poo). Phew! That's a mouthful and I wouldn't expect you to pronouce it perfectly. I'm originally from Honolulu, HI. I'm an aspiring developer. I have received a Certificate of Achievement from PunchCode, an immersive 12-week coding bootcamp course located in Las Vegas, NV. I don't know every thing about coding but I am willing to learn.</p>
           
@@ -87,13 +87,13 @@
           <div class="port">
             <div class="projects">
               <div class="front">
-                <a href="https://mock-sk8er-site.now.sh/" target="_blank">
-                  <img src="./assets/peralta-logo.png" id="pic"> </a>
-                <p class="projtitle"><a href="https://mock-sk8er-site.now.sh/" target="_blank">Sk8er Site</a></p>
+                <a href="https://new-todo-app.aphanpo.vercel.app/" target="_blank">
+                  <img src="https://images.pexels.com/photos/131979/pexels-photo-131979.jpeg?auto=compress&cs=tinysrgb&dpr=2" id="pic"> </a>
+                <p class="projtitle"><a href="https://new-todo-app.aphanpo.vercel.app/" target="_blank">To Do App</a></p>
               </div>
               <div class="back">
-                <p>Mock Skater Site</p>
-                <p id="gh"><a href="http://github.com/aphanpo/sk8er-site" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+                <p>To Do App</p>
+                <p id="gh"><a href="http://github.com/aphanpo/new-todo-app" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
               </div>
             </div>
           </div>
@@ -106,6 +106,7 @@
               </div>
               <div class="back">
                 <p>Used large JSON data</p>
+                <p>Javascript</p>
                 <p id="gh"><a href="https://github.com/aphanpo/Create-Etsy-Search-Page" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
               </div>
             </div>
@@ -119,6 +120,8 @@
               </div>
               <div class="back">
                 <p>Collaborative project</p>
+                <p>jQuery</p>
+                <p>Javascript</p>
                 <p id="gh"><a href="https://github.com/alexjmitchell/restaurant-project" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
               </div>
             </div>
