add link to back

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
               <div class="back">
                 <p>24 hour clock / Hex numbers</p>
                 <p id="gh"><a href="https://github.com/aphanpo/Javascript-Clock" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+                <p id="site"><a href="https://javascript-clock-two.now.sh//" target="_blank"><i class="fas fa-eye"></i></a></p>
               </div>
             </div>
           </div>
@@ -94,6 +95,7 @@
               <div class="back">
                 <p>To Do App</p>
                 <p id="gh"><a href="http://github.com/aphanpo/new-todo-app" target="_blank"><i class="fab fa-github github"></i> Github</a></p>
+                <p id="site"><a href="https://new-todo-app.aphanpo.vercel.app/" target="_blank"><i class="fas fa-eye"></i></a></p>
               </div>
             </div>
           </div>
