--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
           </section>
 
           <!-- Project 2 -->
-          <!-- <section class="project-item">
-            <img src="images/project-women-tech.jpg" alt="website thumbnail">
-            <h3>Women&&Tech</h3>
-            <p>Women&&Tech was launched in 2012 to feature interviews with different women working in the tech industry. I became familiar with them when I was invited to be one of the interviewees! A few years later, I joined the team and helped with the relaunch of the site as the front-end architect.</p>
-            <a class="btn" href="http://christinatruong.com/projects/women-and-tech-redesign.html" target="_blank">View the case study</a>
-          </section> -->
+          <section class="project-item">
+            <img src="assets/clock-logo.png" alt="website thumbnail">
+            <h3>JavaScript Clock</h3>
+            <p>Created a real-time 24 hour clock using JavaScript. Background also changes according to Hex color clock time.</p>
+            <a class="btn" href="https://javascript-clock-two.vercel.app/" target="_blank">See what time it is.</a>
+          </section>
 
           <!-- Project 3 -->
-          <!-- <section class="project-item">
-            <img src="images/project-wire-ipsum.jpg" alt="website thumbnail">
-            <h3>The Wire Ipsum</h3>
-            <p>After coming back from teaching a JavaScript workshop, I felt inspired to create something just for fun. I realized that of all the content/lorem ipsum generators available, there was nothing for HBO’s The Wire fans. I searched for <a href="http://thewireipsum.com" target="_blank">thewireipsum.com</a> domain and it was available! Generate some content for your projects today.</p>
-            <a class="btn" href="http://thewireipsum.com" target="_blank">View live site</a>
-          </section> -->
+          <section class="project-item">
+            <img src="https://images.pexels.com/photos/3299/postit-scrabble-to-do.jpg?auto=compress&cs=tinysrgb&dpr=2" alt="website thumbnail">
+            <h3>To-Do List</h3>
+            <p>One of my first JavaScript projects. Add and delete tasks to your list today!</p>
+            <a class="btn" href="https://new-todo-app.vercel.app/" target="_blank">Create your list.</a>
+          </section>
         </div>
       </section>
 
