added my food blog

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
           <!-- Project 1 -->
           <section class="project-item">
-            <img src="assets/NewLogo.png" alt="earth angel of christ thumbnail">
+            <img src="assets/NewLogo.png" alt="website thumbnail">
             <h3>Earth Angel Of Christ</h3>
             <p>Revamped client's website and integrated new scheduling and payment applications. Worked closely with client during entire process. </p>
             <a class="btn" href="https://www.earthangelofchrist.com" target="_blank">Earth Angel Of Christ</a>
@@ -37,13 +37,21 @@
 
           <!-- Project 2 -->
           <section class="project-item">
+            <img src="assets/Mimosa.jpg" alt="website thumbnail">
+            <h3>PSAmyEats</h3>
+            <p>My food blog featuring restaurants I've been to throughout Las Vegas and my travels. I also added some recipes that I've tried myself and have been approved by my taste testers.. friends and family! </p>
+            <a class="btn" href="https://www.psamyeats.com" target="_blank">PSAmyEats</a>
+          </section>
+
+          <!-- Project 3 -->
+          <section class="project-item">
             <img src="assets/clock-logo.png" alt="website thumbnail">
             <h3>JavaScript Clock</h3>
             <p>Created a real-time 24 hour clock using JavaScript. Background also changes according to Hex color clock time.</p>
             <a class="btn" href="https://javascript-clock-two.vercel.app/" target="_blank">See what time it is.</a>
           </section>
 
-          <!-- Project 3 -->
+          <!-- Project 4 -->
           <section class="project-item">
             <img src="https://images.pexels.com/photos/3299/postit-scrabble-to-do.jpg?auto=compress&cs=tinysrgb&dpr=2" alt="website thumbnail">
             <h3>To-Do List</h3>
