switched eaoc logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
           <!-- Project 1 -->
           <section class="project-item">
-            <img src="assets/NewLogo.png" alt="website thumbnail">
+            <img src="assets/EAOCscreenshot.PNG" alt="website thumbnail">
             <h3>Earth Angel Of Christ</h3>
             <p>Revamped client's website and integrated new scheduling and payment applications. Worked closely with client during entire process. </p>
             <a class="btn" href="https://www.earthangelofchrist.com" target="_blank">Earth Angel Of Christ</a>
