--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             </div>
             <div class="job-summary">
               <p>Loading, unloading and/or sorting of packages of varying sizes and weights by hand, including lifting, pushing, pulling, carrying, scanning, placing packages, as well as physical bending, twisting, kneeling and etc. in a safe and efficient manner.</p>
+              <p>Package Handler of the Month - Awarded April 2021</p>
             </div>
           </section>
 
@@ -99,6 +100,7 @@
             <h3>PunchCode</h3>
             <p>Fullstack Web Developer Certificate, 2019</p>
             <p>12 week full-time program covering HTML, CSS, JavaScript, MySQL, NodeJS, React.</p>
+            <p>Women In Tech Scholarship - Awarded December 2019</p>
           </section>
 
           <section>
